@@ -1,5 +1,8 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - parse shell args to execute more commands without shell
+
 1.3.2    Thu Mar  2 16:21:22 CET 2023
           - improve restarting epn server
           - fix reading large epn server plugin output
